--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Proyecto de Angular</h1>
+<h1>Proyecto de Angular {{title}}</h1>
 
 <ul>
   <li><a [routerLink]="['/sobre-mi']">Sobre mi</a></li>
