--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Proyecto de Angular {{title}}</h1>
 
+<p>Hector lopez</p>
+
 <ul>
   <li><a [routerLink]="['/sobre-mi']">Sobre mi</a></li>
   <li><a [routerLink]="['/proyectos']">Proyectos</a></li>
