--- a/proyecto-angular/src/app/app.component.html
+++ b/proyecto-angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Proyecto de Angular {{title}}</h1>
 
-<p>Hector lopez</p>
+<p>Hector</p>
 
 <ul>
   <li><a [routerLink]="['/sobre-mi']">Sobre mi</a></li>
